[package]
name = "emycloud-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1", features=["backtrace"]}
base64 = "0.13.0"
error-chain = "0.12"
reqwest = {version="0.11", features=["json", "multipart", "blocking"]}
tokio = { version = "1", features = ["full"] } # version 1 required for reqwest
