[package]
name = "emycloud-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1", features=["backtrace"]}
base64 = "0.13.0"
clap = { version = "3.1.16", features = ["derive"] }
error-chain = "0.12"
log = "0.4.17"
reqwest = {version="0.11", features=["json", "multipart", "blocking"]}
simple_logger = { version = "2.1.0", features = ["stderr"] }
tokio = { version = "1", features = ["full", "fs"] } # version 1 required for reqwest
uuid = { version = "1.0.0", features = ["v5"] }
