[package]
name = "emycloud-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1", features=["backtrace"]}
base64 = "0.13.0"
clap = { version = "3.1.16", features = ["derive"] }
log = "0.4.17"
reqwest = {version="0.11", features=["json", "multipart", "blocking"]}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simplelog = "0.12.0"
tokio = { version = "1", features = ["full", "fs"] } # version 1 required for reqwest
uuid = { version = "1.0.0", features = ["v4"] }
